--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,9 @@ TSWLatexianTemp*
 *.glstex
 
 # End of https://www.toptal.com/developers/gitignore/api/latex
+
+# Custom
+
+# Generated output file
+
+debut.pdf
